--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -1,19 +1,50 @@
-/*body{*/
-	/*width: 600px;*/
-	/*margin: 0 auto;*/
-	/*border: 5px solid tomato;*/
-/*}*/
-/*.users{*/
-	/*float : right;*/
-	/*margin-right: 1.5em;*/
-/*}*/
-/*.messages {*/
-	/*width: 400px;*/
-	/*margin: 1em;*/
-	/*border : 1px solid black;*/
-	/*padding: 1em;*/
-/*}*/
-/*.message_form,*/
-/*.change_name_form{*/
-	/*padding: 1em;*/
-/*}*/
+body {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    align-items: stretch;
+    padding: 0.10em;
+	overflow:hidden;
+}
+
+body, html {
+	height: 98%;
+}
+
+#app {
+	height: 100%;
+	width: 100%;
+	background: #bada55;
+}
+
+.flex-container {
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-content: flex-start;
+	align-items: flex-start;
+	height: 100%;
+}
+
+.flex-item {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 0 0.5em;
+    text-align: center;
+}
+
+.chat-container {
+	width: 100%;
+	height:100%;
+	align-items: stretch;
+}
+
+.chat-user-list {
+	width: 22%;
+	height: 95%;
+	align-items: flex-start;
+}
