--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -1,10 +1,10 @@
 body {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: stretch;
-    align-items: stretch;
-    padding: 0.10em;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-content: stretch;
+	align-items: stretch;
+	padding: 0.10em;
 	overflow:hidden;
 }
 
@@ -15,7 +15,7 @@ body, html {
 #app {
 	height: 100%;
 	width: 100%;
-	background: #bada55;
+	background-color: #bad;
 }
 
 .flex-container {
@@ -30,11 +30,11 @@ body, html {
 
 .flex-item {
 	display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 0 0.5em;
-    text-align: center;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	padding: 0 0.5em;
+	text-align: center;
 }
 
 .chat-container {
@@ -45,22 +45,43 @@ body, html {
 
 .chat-user-list {
 	width: 22%;
-	height: 95%;
+	height: 75%;
 	align-items: flex-start;
+	padding-top: 1em;
 }
 
 .messages-container {
-    flex-direction: row;
-    width: 75%;
-    height: 95%;
+	flex-direction: row;
+	width: 75%;
+	height: 95%;
+	padding-top: 1em;
 }
 
 .messages-display {
-    height: 80%;
+	height: 80%;
 	overflow: scroll;
 }
 
 .message-composer {
-    margin-top: 1em;
-    height: 20%;
+	margin-top: 1em;
+	height: 20%;
 }
+
+.login-page {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	background: #bad;
+	text-align: center;
+}
+
+.login-form {
+	margin: 0 auto;
+}
+
